RESOLVED FIXED258659
GPU process startup does not have release logging
https://bugs.webkit.org/show_bug.cgi?id=258659
Summary GPU process startup does not have release logging
Kimmo Kinnunen
Reported 2023-06-29 01:59:02 PDT
GPU process startup does not have release logging It is hard to know if the messages are not responded because the GPUP is not processing them or because the UI process is not establishing the GPU process
Attachments
Radar WebKit Bug Importer
Comment 1 2023-06-29 01:59:14 PDT
Kimmo Kinnunen
Comment 2 2023-06-29 02:37:31 PDT
EWS
Comment 3 2023-06-29 23:29:28 PDT
Committed 265644@main (8cdb27dae2a9): <https://commits.webkit.org/265644@main> Reviewed commits have been landed. Closing PR #15398 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.