GPU process startup does not have release logging https://bugs.webkit.org/show_bug.cgi?id=258659 rdar://111501591

Reviewed by Simon Fraser.

Add WebContent process logging to establishing GPU process connection.

Common message timeout root cause might be that the UI process does not
forward the connection to GPU process.

* Source/WebKit/WebProcess/GPU/GPUProcessConnection.cpp:
(WebKit::GPUProcessConnection::create):
(WebKit::GPUProcessConnection::didClose):
(WebKit::GPUProcessConnection::didInitialize):
(WebKit::GPUProcessConnection::waitForDidInitialize):
* Source/WebKit/WebProcess/WebProcess.cpp:
(WebKit::WebProcess::ensureGPUProcessConnection):

Canonical link: https://commits.webkit.org/265644@main