Source/WebKit/WebProcess/GPU/GPUProcessConnection.cpp
@@ -125,6 +125,7 @@ RefPtr<GPUProcessConnection> GPUProcessConnection::create(IPC::Connection& paren
     if (parentConnection.ignoreInvalidMessageForTesting())
         instance->connection().setIgnoreInvalidMessageForTesting();
 #endif
+    RELEASE_LOG(Process, "GPUProcessConnection::create - %p", instance.ptr());
     return instance;
 }
 
@@ -166,6 +167,7 @@ void GPUProcessConnection::invalidate()
 
 void GPUProcessConnection::didClose(IPC::Connection&)
 {
+    RELEASE_LOG_ERROR(Process, "%p - GPUProcessConnection::didClose", this);
     auto protector = Ref { *this };
     WebProcess::singleton().gpuProcessConnectionClosed(*this);
 
@@ -292,10 +294,12 @@ bool GPUProcessConnection::dispatchSyncMessage(IPC::Connection& connection, IPC:
 void GPUProcessConnection::didInitialize(std::optional<GPUProcessConnectionInfo>&& info)
 {
     if (!info) {
+        RELEASE_LOG_ERROR(Process, "%p - GPUProcessConnection::didInitialize - failed", this);
         invalidate();
         return;
     }
     m_hasInitialized = true;
+    RELEASE_LOG(Process, "%p - GPUProcessConnection::didInitialize", this);
 
 #if ENABLE(VP9) && USE(LIBWEBRTC) && PLATFORM(COCOA)
     WebProcess::singleton().libWebRTCCodecs().setVP9VTBSupport(info->hasVP9HardwareDecoder);
@@ -308,6 +312,7 @@ bool GPUProcessConnection::waitForDidInitialize()
     if (!m_hasInitialized) {
         auto result = m_connection->waitForAndDispatchImmediately<Messages::GPUProcessConnection::DidInitialize>(0, defaultTimeout);
         if (result != IPC::Error::NoError) {
+            RELEASE_LOG_ERROR(Process, "%p - GPUProcessConnection::waitForDidInitialize - failed, error:%" PUBLIC_LOG_STRING, this, IPC::errorAsString(result));
             invalidate();
             return false;
         }
